--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         
-         <center><div class="titulo">UNIDAD CANINA DE RESCATE ALPESA</div></center>
+         <center><div class="titulo">U.C.R. ALPESA</div></center>
 
          <center><div class="menu"><a href="sf">CONTACTO</a></div></center>
 
