--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <center><div class="titulo-footer">nuestras redes</div></center>
        
         <center>
-<a href="https://instagram.com/" ><img src="insta.png" width="96px" height="96px"></a>
+<a href="https://instagram.com/" ><img src="instag.png" width="96px" height="96px"></a>
  <a href="https://twitter.com/"><img src="twitter.png"width="96px" height="96px"></a>
-  <a href="https://facebook.com/"><img src="facebook.png" width="96px" height="96px"></a>
+  <a href="https://facebook.com/"><img src="facebooks.png" width="96px" height="96px"></a>
  </center>
         
 
