--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
        
         <center>
 <a href="https://instagram.com/" ><img src="instag.png" width="96px" height="96px"></a>
- <a href="https://twitter.com/"><img src="twitter.png"width="96px" height="96px"></a>
-  <a href="https://facebook.com/"><img src="facebooks.png" width="96px" height="96px"></a>
+ <a href="https://twitter.com/ucr_alpesa"><img src="twitter.png"width="96px" height="96px"></a>
+  <a href="https://es-la.facebook.com/pages/category/Nonprofit-Organization/UCR-Alpesa-Sevilla-735804829866123/"><img src="facebooks.png" width="96px" height="96px"></a>
  </center>
         
 
