--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
          <center><div class="titulo"><H1>U.C.R. ALPESA</H1></div></center>
 
-         <center><div class="menu"><a href="sf">CONTACTO</a></div></center>
+        <center><div class="menu"><a href="sf">GALERIA</a><a href="ss">ACTIVIDADES</a><a href="sd"></a><a href="as">ADIESTRAMIENTO</a></div></center>
 
     </header>
 
