--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
 
     <div class="contenedor">
                 <h2 class="titulop">Contactanos</h2>
-              <h3 class="slogan" ><a href="mailto:brunosarmiento13@hotmail.com">EMAIL</a></h3>
-                <h3 class="slogan">TELEFONO</h3>
+
+             <center> <a class="slogan" href="mailto:brunosarmiento13@hotmail.com">CLICK AQUI PARA CONTACTAR POR EMAIL</a></center>
+             <br/>
+               <center> <a class="slogan">EMAIL:brunosarmiento13@hotmail.com</a></center>
+               <br/>
+               <center> <a class="slogan" href="tel:606224812">CLICK AQUI PARA LLAMAR POR TELEFONO</a></center>
+
                 
 
             </div>
