--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <title>ucr</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
-<!-- Hola qué tal, te recuerdo que la web es de uso libre -->
-<!-- usala para lo que desees y no olvides suscribirte a AlexCG Design -->
-<!-- Web hecha por AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design -->
-<!-- ->>>> https://www.youtube.com/alexcgdesign <<<<- -->
 
 
 
@@ -22,7 +18,7 @@
         
          <center><div class="titulo"><H1>U.C.R. ALPESA</H1></div></center>
 
-        <center><div class="menu"><a href="galeria.html">GALERIA |</a><a href="galeria.html"> ACTIVIDADES |</a><a href="sd"></a><a href="as"> ADIESTRAMIENTO</a></div></center>
+         <center><div class="menu"><a href="galeria.html">GALERIA |</a><a href="adiestramiento.html"> ADIESTRAMIENTO</a></div></center>
 
     </header>
 
