--- a/galeria.html
+++ b/galeria.html
@@ -8,10 +8,7 @@
     <title>ucr</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
-<!-- Hola qué tal, te recuerdo que la web es de uso libre -->
-<!-- usala para lo que desees y no olvides suscribirte a AlexCG Design -->
-<!-- Web hecha por AlexCG Design, si te sirvió la plantilla por favor entra a AlexCG Design -->
-<!-- ->>>> https://www.youtube.com/alexcgdesign <<<<- -->
+
 
 
 
@@ -22,7 +19,7 @@
         
          <center><div class="titulo"><H1>U.C.R. ALPESA</H1></div></center>
 
-        <center><div class="menu"><a href="sf">GALERIA |</a><a href="ss"> ACTIVIDADES |</a><a href="sd"></a><a href="as"> ADIESTRAMIENTO</a></div></center>
+        <center><div class="menu"><a href="index.html">INICIO |</a><a href="adiestramiento.html"> ADIESTRAMIENTO</a></div></center>
 
     </header>
 
